--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/macaroni.html">Classic Macaroni Salad</a>
-    <a href="recipes/ham.html">Oven Baked Pulled Ham</a>
-    <a href="recipes/cauliflower.html">Garlic Mashed Cauliflower</a>
+    <ul>
+      <li><a href="recipes/macaroni.html">Classic Macaroni Salad</a></li>
+      <li><a href="recipes/ham.html">Oven Baked Pulled Ham</a></li>
+      <li><a href="recipes/cauliflower.html">Garlic Mashed Cauliflower</a></li>
+    </ul>
   </body>
 </html>
